--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My CV</title>
+	<title>我的English简历</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta http-equiv="Generator" content="CV Maker - https://cvmkr.com/" />
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300&subset=latin,latin-ext" rel="stylesheet" type="text/css" />
 	<style type="text/css">
 		body {
 			background: #f0f0f0;
@@ -227,7 +228,7 @@
 			<h2 class="title">Qualifications</h2>
 			<div class="set">
 						<div class="item">
-							<span class="info"><ul><li>Good user of C language and experience with ASM language of arm architecture<br /></li><li>Very familiar with USB sub-system framework and drivers of various OS (Linux kernel / UEFI / U-Boot / Coreboot)<br /></li><li>Low-level system debug skills can use hardware debugger like J-Link and DS5<br /></li><li>Skilled use with logic analyzers and oscilloscopes, can read schematics</li><li>Basic knowledge of script language bash and python<br /></li></ul></span>
+							<span class="info"><ul><li>Good user of C language and experience with ASM language of arm architecture<br /></li><li>Very familiar with USB sub-system framework and drivers of various OS and platform (Linux kernel / UEFI / U-Boot / Coreboot / Windows Mobile)</li><li>Know Linux device driver developing well and good at debugging and resolving with competition issues caused by multi threadings and multi cores<br /></li><li>Low-level system debug skills can use hardware debugger like J-Link and DS5<br /></li><li>Skilled use with logic analyzers and oscilloscopes, can read schematics</li><li>Basic knowledge of script language bash and python</li><li>Familiar with reversion control tools like svn/git and code review workflow(many open source projects use gerrit as code review system)</li><li>Know the basic concept and workflow of how to design and implement an integrated circuit and familiar with the architecture of arm based SoC<br /></li><li>Good English skill and could use it as working languages</li><li>Good team working and happy to learn and share knowledges with workmates</li></ul></span>
 						</div>
 					</div>
 			<div class="clear"> </div>
@@ -240,7 +241,8 @@
 						<span class="date r">Jun 2012 &mdash; Present</span>
 							</h3>
 							<span class="clear"> </span>
-							<span class="job_title">Software Engineer</span><span class="info"><ul><li>Design,  implementation,  test and maintain USB drivers for Rockchip platform SoC chips</li><li>Contributor of linux kernel dwc2 USB controller driver</li><li>Maintainer of Coreboot USB stack<br /></li></ul></span><span class="clear"> </span>
+							<span class="job_title">Software Engineer</span><span class="info"><ul><li>Design,  implementation,  test and maintain USB drivers for Rockchip platform SoCs<br /></li><li>Contributor of linux kernel dwc2 USB controller driver</li><li>Maintainer of Coreboot USB stack</li><li>Work with IC design team to improve performance / reduce power consumption of USB module<br /></li><li>Check hardware design with USB module<br /></li><li>Helpe customers develop drivers for custom USB devices</li><li>Maintain HSIC module for RK serial chips<br /></li></ul>   <br /><br />    In Rockchip, my responsibility is to maintain USB functions for RK serial SoCs. It includesUSB hardward design / USB PHY driver / USB controller driver in both host and device side / USB device class drivers / other misc drivers relative with USB like USB battery charge (BC1.2) and USB-to-serial debugger function system and driver to download images in manufacture mode.<br /><br />
+    I make USB could work well in different chips with various operating systems (Upstream Kernel / RK's 3.10 Kernel / U-Boot / Coreboot / Windows 10 Mobile ) , so I know the USB framework of these operating systems.<br /><br />     I know much about EHCI/DWC2 USB controller IP and many kinds of USB PHY IP. Also I contribute lots of patch about dwc2 and USB PHY to Linux kernel upstream and Coreboot community, I have experience of communicate with upstream driver maintainers.<br />    </span><span class="clear"> </span>
 							</div>
 						</div>
 			<div class="clear"> </div>
@@ -256,6 +258,15 @@
 							<span class="school">Fuzhou university</span><span class="info">Graduated with Bachelor Degree </span><span class="clear"> </span>
 						</div>
 						</div>
+			<div class="clear"> </div>
+		</div>
+			<div class="section section-references">
+			<h2 class="title">References</h2>
+			<div class="set">
+						<div class="item">
+							<span class="info">Mails in Linux Kenel Mail List : <a href="https://patchwork.kernel.org/project/LKML/list/?submitter=116601" rel="nofollow">https://patchwork.kernel.org/project/LKML/list/?submitter=116601</a><br />Coreboot commits : <a href="http://review.coreboot.org/#/q/lyz@rock-chips.com" rel="nofollow">http://review.coreboot.org/#/q/lyz@rock-chips.com</a></span>
+						</div>
+					</div>
 			<div class="clear"> </div>
 		</div>
 		
